syntax="proto3";

package proto;
option go_package="../proto";

service UploadService {
    // 获取上传入口地址
    rpc UploadEntry(ReqUploadEntry) returns (RespUploadEntry) {}
}

message ReqUploadEntry {
}

message RespUploadEntry {
    int32 code = 1;
    string message = 2;
    string entry = 3;
}